--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  background-color: red;
+  background-color: #4d4a77;
 }
 
 /* Menu styles starts*/
@@ -88,6 +88,4 @@ body {
   background-color: blanchedalmond;
   color: #111;
 }
-
-/* Welcome-card styles ENDS*/
 /*# sourceMappingURL=main.css.map */
